# object_recognition_core

./: .gitignore  10.object_recognition_core.buildspace.all.in  10object_recognition_core.all.in  10object_recognition_core.buildspace.all.in  CHANGELOG.rst  CMakeLists.txt  README.rst  TODO  env.rosinstall  genindex.html  index.html  index_developer.html  index_user.html  install.html  mainpage.dox  manifest.xml  objects.inv  package.xml  params.json  quickguide.html  rosbuild_lite.cmake  rosdep.yaml  search.html  searchindex.js  setup.py  stack.xml  stack.yaml
python/: CMakeLists.txt  __init__.py.split.in  couchdb
python/couchdb-python/couchdb/: __init__.py  mapping.py
python/object_recognition/: __init__.py  config_detection.txt  dbtools.py  detection.py  models.py  object_search.py
python/object_recognition/capture/: __init__.py  bag_capture.py  capture.py  fiducial_pose_est.py  openni_capture.py  orb_capture.py  play.py  stop.py
python/object_recognition/ingest/: bag_upload.py
python/object_recognition/observations/: __init__.py  compute_observations.py  fiducial_pose_est.py
python/object_recognition/pipelines/: __init__.py  detection.py  tod.py  training.py
python/object_recognition/reconstruction/: __init__.py  reconstruction.py
python/object_recognition/ros/: sink.py  source.py
python/object_recognition/tod/: __init__.py  detector.py  feature_descriptor.py  trainer.py
python/object_recognition_core/: __init__.py
python/object_recognition_core/db/: __init__.py  cells.py  dbtools.py  models.py  object_db.py  tools.py
python/object_recognition_core/filters/: masker.py
python/object_recognition_core/io/: __init__.py  sink.py  source.py  voter.py
python/object_recognition_core/pipelines/: detection.py  plasm.py  training.py
python/object_recognition_core/utils/: config.py  doc.py  find_classes.py  json_helper.py  parser.py  training_detection_args.py
share/: CMakeLists.txt
src/: CMakeLists.txt  recogition_node.cpp  recognition_node.cpp
src/capture/: CMakeLists.txt  DeltaRT.cpp  ObservationReader.cpp  ObservationWriter.cpp  RescaleRegisteredDepth.cpp  bag_read.py  camera.yml  capture_db.cpp  data_capture.py  dbreader.py  fiducial_pose_est_ros.py  ingest.sh  ingest_data.py  kinect_capture.py  module.cpp  observations.cpp
src/common/: CMakeLists.txt  dict_json_conversion.cpp  module_python.cpp  object_info.cpp  pose_result.cpp  wrap_db_pose_result.cpp
src/common/conversion/: CMakeLists.txt  KeypointValidator.cpp  MatToPointCloud.cpp  PointCloudToDepthMat.cpp  PointCloudToMat.cpp  module.cpp
src/common/filters/: CMakeLists.txt  depth_filter.cpp  module.cpp
src/common/io/: CMakeLists.txt  GuessCsvWriter.cpp  GuessTerminalWriter.cpp  csv.cpp  csv.h  module.cpp
src/common/opencv_candidate/: CMakeLists.txt  Camera.cpp  PoseRT.cpp  hamming.h  lsh.cpp
src/common/voters/: Aggregator.cpp  CMakeLists.txt  module.cpp
src/db/: CMakeLists.txt  ModelInserter.cpp  ModelWriter.cpp  ObservationReader.cpp  ObservationWriter.cpp  couch.cpp  curl_interface.h  db.cpp  db_base.h  db_couch.cpp  db_couch.h  db_default.h  db_empty.h  db_filesystem.cpp  db_filesystem.h  model_utils.cpp  module.cpp  module_python.cpp  observations.cpp  opencv.cpp  serialization_opencv.cpp  utils.cpp  view.cpp  wrap_db_documents.cpp  wrap_db_parameters.cpp  wrap_object_db.cpp
src/db/json_spirit/: CMakeLists.txt  json_spirit.h  json_spirit_reader.cpp  json_spirit_reader.h  json_spirit_utils.h  json_spirit_value.h  json_spirit_writer.cpp  json_spirit_writer.h
src/db/testing/: CMakeLists.txt  couch_surfing.cpp
src/easy_capture/: CMakeLists.txt  SamplePclFilter.cpp  easy_capture.py  module.cpp
src/filters/: CMakeLists.txt  depth_filter.cpp
src/io/: Aggregator.cpp  CMakeLists.txt  GuessCsvWriter.cpp  GuessTerminalWriter.cpp  PipelineInfo.cpp  csv.cpp  csv.h  module_voter.cpp
src/io/ros/: CMakeLists.txt  MsgAssembler.cpp  PoseArrayAssembler.cpp  VisualizationMsgAssembler.cpp
src/line_mod/: colormod.py  line_mod.cpp
src/pipelines/: CMakeLists.txt  ConstantPipeline.cpp  module.cpp
src/reconstruction/: .gitignore  CMakeLists.txt  PointCloudAccumulator.cpp  PointCloudMesh.cpp  PointCloudTransform.cpp  SimpleReconstruction.cpp  SurfelReconstruction.cpp  dbreader.py  meshing.mlx  module.cpp  reconstruction_db.cpp  surfel_conversion.cpp  surfel_conversion.h  surfel_conversion.hpp  surfel_reconstruction.py  surfels.cpp  surfels.h
src/ros/: module.cpp
src/server/: CMakeLists.txt  client.py  server.py
src/server/action/: ObjectRecognition.action
src/server/conf/: config_detection.sample
src/server/launch/: client.launch  (+3 more)
src/sim/: CMakeLists.txt  Cone.cxx  fsim.py  module.cpp  notes.txt  plane_render.cpp  readme.rst
src/tod/: CMakeLists.txt  CameraToWorld.cpp  F3dCreator.cpp  TwoDToThreeD.cpp  bag_reader.cpp  camera.kinect.vga.yml  camera.kinect.yml  cameraToWorld.cpp  dbreader.py  guess_generator.cpp  notes.rst  objcog_db.cpp  posedetector.cpp  tod.cpp  tod.viz  tod_db.cpp  tod_detecting.py  tod_training.py  training.py  twoDToThreeD.cpp
test/: CMakeLists.txt  couch_surfing.py  detection.test.ork  openni_opposing_dots.py  test_capture_help.py  test_common_io_ros_sink.py  test_common_io_ros_source_bag_reader.py  test_common_io_ros_source_kinect.py  test_common_io_source_creation.py  test_common_io_source_interface.py  test_config.py  test_detection_pipeline.py  test_help.py  test_import.py  test_marker_pub.py  test_mesh_object_help.py  test_opposing_dot_estimator.py  test_tod_detection.py  test_tod_training.py  test_training_help.py  test_training_pipeline.py  test_training_pipelines.py  test_upload_help.py  tod_features.py  validate_sample.sh  view_observations.py
test/db/: CMakeLists.txt  db.cpp  db_test.cpp  db_test.py
test/share/: CMakeLists.txt  desktop_test.sh  run_test.sh  test_config.py  test_detection_pipeline.py  test_help.py  test_import.py  test_sink.py  test_source.py  test_training_pipeline.py
test/tod/: CMakeLists.txt  test_maximum_clique.cpp
web_ui/: CMakeLists.txt  _id  push.sh
web_ui/_attachments/: index.html  meshes.html  objects.html
(+297 files in other folders)
