<package>
  <name>object_recognition_core</name>
  <version>0.4.8</version>
  <description>object_recognition_core contains tools to launch several recognition pipelines, train objects, store models ...</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <author email="vrabaud@willowgarage.com">Vincent Rabaud</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://ecto.willowgarage.com/recognition</url>
  <build_depend>actionlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_image_pipeline</build_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_image_pipeline</build_depend>

  <test_depend>visualization_msgs</test_depend>
</package>
