<package>
  <name>object_recognition_core</name>
  <version>0.4.19</version>
  <description>object_recognition_core contains tools to launch several recognition pipelines, train objects, store models ...</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <author email="vrabaud@willowgarage.com">Vincent Rabaud</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://ecto.willowgarage.com/recognition</url>

  <build_depend>boost</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_image_pipeline</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>couchdb</run_depend>
  <run_depend>curl</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_image_pipeline</run_depend>

  <test_depend>visualization_msgs</test_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
